tests/type-check/bad/import-refined-data2.arr
include file("./lib/provide-data.arr")

d2.only-defined-on-d1()

